--- a/ticket/src/app/main/main.component.html
+++ b/ticket/src/app/main/main.component.html
@@ -5,24 +5,24 @@
           <div class="campos">
               <h3>Te damos la bienvenida a tuTicket.com</h3>
               <select name="paises" id="paises">
-                  <option value="Afganistán">Afganistán (+93)</option>
-                  <option value="Albania">Albania (+355)</option>
-                  <option value="Alemania">Alemania (+49)</option>
-                  <option value="Andorra">Andorra (+376)</option>
-                  <option value="Angola">Angola (+244)</option>
-                  <option value="Bielorrusia">Bielorrusia (+375)</option>
-                  <option value="Bolivia">Bolivia (+591)</option>
-                  <option value="Georgia">Georgia (+995)</option>
-                  <option value="Ghana">Ghana (+233)</option>
-                  <option value="Gibraltar">Gibraltar (+350)</option>
-                  <option value="Granada">Granada (+1)</option>
-                  <option value="Grecia">Grecia (+30)</option>
-                  <option value="Groenlandia">Groenlandia (+299)</option>
-                  <option value="Guadalupe">Guadalupe (+590)</option>
-                  <option value="Guam">Guam (+1)</option>
-                  <option selected="" value="Guatemala">Guatemala (+502)</option>
-                  <option value="GuayanaFrancesa">Guayana Francesa  (+594)</option>
-                  <option value="Guernesey">Guernesey (+44)</option>
+                  <option value="Afganistán">Afganistán</option>
+                  <option value="Albania">Albania</option>
+                  <option value="Alemania">Alemania</option>
+                  <option value="Andorra">Andorra</option>
+                  <option value="Angola">Angola</option>
+                  <option value="Bielorrusia">Bielorrusia</option>
+                  <option value="Bolivia">Bolivia</option>
+                  <option value="Georgia">Georgia</option>
+                  <option value="Ghana">Ghana</option>
+                  <option value="Gibraltar">Gibraltar</option>
+                  <option value="Granada">Granada</option>
+                  <option value="Grecia">Grecia</option>
+                  <option value="Groenlandia">Groenlandia</option>
+                  <option value="Guadalupe">Guadalupe</option>
+                  <option value="Guam">Guam</option>
+                  <option selected="" value="Guatemala">Guatemala</option>
+                  <option value="GuayanaFrancesa">Guayana Francesa</option>
+                  <option value="Guernesey">Guernesey</option>
               </select>
               <input type="text" placeholder="Nombre de usuario" id="nombre">
               <input type="number" placeholder="Edad" id="edad">
@@ -30,7 +30,7 @@
               <input type="password" placeholder="Contraseña" id="contraseña">
               <input type="password" placeholder="Confirmar contraseña" id="contraseña2">
               <div class="registro">
-                  <p>¿Ya estás en Conectados? <a href="/inicioSesion">Iniciar Sesión</a></p>
+                  <p>¿Ya tienes una cuenta? <a href="/inicioSesion">Iniciar Sesión</a></p>
               </div>
               <input type="submit" value="Continúa" id="enviar">
           </div>
