Cambios en template login
Se cambiaron los textos y el diseño de los inputs

--- a/ticket/src/app/main/main.component.html
+++ b/ticket/src/app/main/main.component.html
@@ -3,7 +3,7 @@
       <form id="frmDatos" action="#">
           <legend>Registrarse</legend>
           <div class="campos">
-              <h3>Te damos la bienvenida a tuTicket.com</h3>
+              <h3>Ingresa tus datos para iniciar en tuTicket.com</h3>
               <select name="paises" id="paises">
                   <option value="Afganistán">Afganistán</option>
                   <option value="Albania">Albania</option>
