--- a/ticket/src/app/login/login.component.html
+++ b/ticket/src/app/login/login.component.html
@@ -7,10 +7,10 @@
                 <input type="email" placeholder="Correo electrónico" id="correo">
                 <input type="password" placeholder="Contraseña" id="contraseña">
                 <div class="registro">
-                    <p>Si aun no te registras, <a href="/inicioSesion">Regístrate acá</a></p>
+                    <p>Si aún no te registras, <a href="/inicioSesion">regístrate acá</a></p>
                 </div>
                 <input type="submit" value="Continúa" id="enviar">
             </div>
         </form>
     </div>
-  </main>  
+  </main>
