Se crearon las rutas
Se crearon las rutas "/login" y "/registro"

--- a/ticket/src/app/app.component.html
+++ b/ticket/src/app/app.component.html
@@ -1,7 +1,1 @@
-<body>
-  <app-canezera></app-canezera>
-  <app-login></app-login>
-  <footer id="footer">
-
-  </footer>
-</body>
+<router-outlet></router-outlet>
