--- a/ticket/src/app/login/login.component.html
+++ b/ticket/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<app-canezera></app-canezera>
 <main id="main">
     <div class="contenedor sombra">
         <form id="frmDatos" action="#">
@@ -14,3 +15,6 @@
         </form>
     </div>
   </main>
+  <footer id="footer">
+
+  </footer>
