--- a/ticket/src/app/main/main.component.html
+++ b/ticket/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<app-canezera></app-canezera>
 <main id="main">
   <div class="contenedor sombra">
       <form id="frmDatos" action="#">
@@ -37,3 +38,6 @@
       </form>
   </div>
 </main>
+<footer id="footer">
+
+</footer>
