template de signin, signup, eventos

--- a/ticket/src/styles.css
+++ b/ticket/src/styles.css
@@ -1,100 +1,1 @@
-:root{
-  --blanco: #ffffff;
-}
-html{
-  font-size: 62.5%;
-  box-sizing: border-box;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-}
-
-*, *:before, *:after{
-  box-sizing: inherit;
-}
-
-body{
-  font-size: 16px;
-  margin: 0;
-  background-image: url("https://d7lju56vlbdri.cloudfront.net/var/ezwebin_site/storage/images/_aliases/img_1col/reportajes/cuando-volveremos-a-ir-a-conciertos-con-normalidad/8867610-2-esl-MX/Cuando-volveremos-a-ir-a-conciertos-con-normalidad.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-
-.contenedor{
-  max-width: 60rem;
-  margin: 0 auto;
-  border: 0.01rem solid gainsboro;
-  margin-top: 10rem;
-  border-radius: 2rem;
-  background-color:  #ffffff;
-}
-
-#frmDatos{
-  padding: 3rem;
-}
-
-#frmDatos legend{
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #484848;
-  margin: 0 auto;
-}
-
-#frmDatos h3{
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  font-size: 2rem;
-  color: #484848;
-}
-
-.campos{
-  display: flex;
-  flex-direction: column;
-  margin-top: 2rem;
-  border-top: 0.1rem solid gainsboro;
-}
-
-.campos select{
-  border-style: solid solid solid solid;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-width: 0.1rem;
-  height: 4rem;
-  border-color: gainsboro;
-  padding-left: 2rem;
-  color: #757575;
-}
-
-.campos input{
-  border-style: none solid solid solid;
-  border-width: 0.1rem;
-  height: 5rem;
-  border-color: gainsboro;
-  padding-left: 2rem;
-}
-
-.campos input:nth-child(7){
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-.campos input:last-child{
-  margin-top: 2rem;
-  border-style: none;
-  border-radius: 1rem;
-  background-color: #601c34;
-  color: white;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-
-.registro{
-  margin: auto;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-}
-
+/* You can add global styles to this file, and also import other style files */
