--- a/ticket/src/app/componentes/crear-evento/crear-evento.component.css
+++ b/ticket/src/app/componentes/crear-evento/crear-evento.component.css
@@ -4,16 +4,7 @@
   --claro: #ffffff;
 }
 
-*, *:before, *:after{
-  box-sizing: inherit;
-}
 
-
-body{
-  margin: 0;
-  font-size: 16px;
-  background-color: #F7F7F7;
-}
 
 html{
   font-size: 62.5%;
@@ -23,6 +14,8 @@ html{
   display: flex;
   flex-direction: column;
 }
+
+
 
 h1{
   font-size: 2.6rem;
@@ -130,9 +123,10 @@ header{
 
 .cont{
   max-width: 90rem;
+  height: 70vh;
   margin: 0 auto;
   border: 0.01rem solid gainsboro;
-  margin-top: 5rem;
+  margin-top: 3rem;
   background-color: #ffffff;
 }
 
@@ -141,19 +135,17 @@ header{
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(6, 10rem);
+  grid-template-rows: repeat(6, 7rem);
 }
-
-
-
 
 .contenedor-imagenes{
   grid-column: 2/3;
   grid-row: 2/6;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
+
+
 
 h2{
   grid-column: 1/3;
@@ -185,7 +177,7 @@ h2{
 .formulario input[type="submit"]{
   grid-column: 1/3;
   grid-row: 6/7;
-  background-color: #E5242B;
+  background-color: #601c34;
   border: none;
   color: #ffffff;
   width: 95%;
@@ -198,7 +190,7 @@ h2{
   margin-left: 2rem;
   width: 80%;
   padding: 1rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 200;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
 }
@@ -240,55 +232,21 @@ h2{
   width: 80%;
 }
 
-.profile-pic-div1,.profile-pic-div2,.profile-pic-div3,.profile-pic-div4{
-  height: 90%;
-  width: 90%;
-  position: relative;
-  overflow: hidden;
-  margin: 0 auto;
-  margin-bottom: 2rem;
-  margin-right: 2rem;
+
+img{
+  width: 10rem;
 }
 
-#photo{
-  height: 100%;
-  width: 100%;
+.filad1{
+  grid-row: 1/2;
 }
-
-
-.profile-pic-div1 label,.profile-pic-div2 label,.profile-pic-div3 label,.profile-pic-div4 label{
-  margin-top: 2rem;
+.filad2{
+  grid-row: 2/3;
 }
-
-#uploadbtn1,#uploadbtn2,#uploadbtn3,#uploadbtn4{
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  background: rgba(170, 170, 170, 0.7);
-  color: var(--blanco);
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  font-size: 15px;
-  cursor: pointer;
-  border: none;
-
+.filad3{
+  grid-row: 3/4;
 }
-
-#photo1{
-  height: 100%;
-  width: 100%;
-}
-#photo2{
-  height: 100%;
-  width: 100%;
-}
-#photo3{
-  height: 100%;
-  width: 100%;
-}
-#photo4{
-  height: 100%;
-  width: 100%;
+.filad4{
+  grid-row: 4/5;
 }
 
