--- a/ticket/src/app/componentes/crear-evento/crear-evento.component.html
+++ b/ticket/src/app/componentes/crear-evento/crear-evento.component.html
@@ -1,15 +1,19 @@
 <header >
   <div class="header contenedor">
       <div class="logo">
-          <img src="{{logo}}">
+          <img [src]="imagen">
       </div>
-      <nav class="navegacion">
-          <a href="#">Javier</a>
-           <ul>
-               <li><a href="#">Cuenta</a></li>
-               <li><a href="#">Mis eventos</a></li>
-           </ul>
-      </nav>
+<!--
+  x 1.nombre del evento
+  x 2.descripcion (breve)
+  8.categoria del evento (combobox)
+  3.fechas y horas
+  x 7.precio
+
+  4.ubiacion
+  6.boletos maximos
+  9.fecha max
+-->
   </div>
 </header>
 <main id="main">
@@ -18,15 +22,15 @@
           <div class="principal">
               <h2>Agregar Actividad</h2>
               <div class="formulario-grupo fila1">
-                  <label for="nombre">Nombre de la actividad</label>
+                  <label for="nombre">Nombre del evento</label>
                   <input id="nombre" name="nombre" class="nombre" type="text" required>
               </div>
               <div class="formulario-grupo fila2">
-                  <label for="descripcion">Descripcion de la actividad</label>
+                  <label for="descripcion">Descripcion del evento</label>
                   <textarea class="descripcion" name = "descripcion" rows="3" required="" id="descripcion"></textarea>
               </div>
               <div class="formulario-grupo fila3">
-                  <label for="categoria">Categoria de la actividad</label>
+                  <label for="categoria">Categoria del evento</label>
                   <select class="categoria" name="categoria" id="categoria">
                       <option selected="">Select category</option>
                       <option value="1">Categoria 1</option>
@@ -36,7 +40,7 @@
               </div>
               <div class="formulario-row fila4">
                   <div class="formulario-grupo row1">
-                      <label for="fecha">Fecha de la actividad</label>
+                      <label for="fecha">Fecha del evento</label>
                       <input id="fecha" name="fecha" class="fecha" type="datetime-local" required>
                   </div>
                   <div class="formulario-grupo row2">
@@ -44,31 +48,35 @@
                       <input id="precio" name = "precio" class="precio" type="text" required>
                   </div>
               </div>
+
               <div class="contenedor-imagenes">
+                <div class="formulario-grupo filad1">
+                  <label for="ubicacion">Ubicacion</label>
+                  <input type="text" name="ubicacion" required>
+                </div>
+                <div class="formulario-grupo fidad2">
+                  <label for="Boletos maximos">Boletos Maximos</label>
+                  <input type="number" name="Boletos Maximos" required>
+                </div>
+                <div class="formulario-grupo filad3">
+                  <label for="Boletos maximos">Boletos Maximos</label>
+                  <input type="number" name="Boletos Maximos" required>
+                </div>
+                <div class="formulario-grupo filad4">
+                <label for="fecha">Fecha maxima para comprar boletos</label>
+                <input id="fecha" name="fecha" class="fecha" type="datetime-local" required>
+                </div>
+<!--
                   <div class="profile-pic-div1">
                       <img id="photo1">
                       <input type="file" id="file1">
                       <label for="file1" name ="file1" id="uploadbtn1">Elegir foto</label>
                   </div>
-                  <div class="profile-pic-div2">
-                      <img id="photo2">
-                      <input type="file" id="file2">
-                      <label for="file2" name ="file2" id="uploadbtn2">Elegir foto</label>
-                  </div>
-                  <div class="profile-pic-div3">
-                      <img id="photo3">
-                      <input type="file" id="file3">
-                      <label for="file3" name ="file3" id="uploadbtn3">Elegir foto</label>
-                  </div>
-                  <div class="profile-pic-div4">
-                      <img id="photo4">
-                      <input type="file" id="file4">
-                      <label for="file4" name ="file4" id="uploadbtn4">Elegir foto</label>
-                  </div>
+-->
               </div>
               <input type="submit" value="Enviar" id="enviar">
            </div>
       </form>
   </div>
 </main>
-</footer>
+<footer></footer>
