--- a/ticket/src/app/componentes/eventos/eventos.component.html
+++ b/ticket/src/app/componentes/eventos/eventos.component.html
@@ -1,1 +1,45 @@
-<p>eventos works!</p>
+<header >
+  <div class="header contenedor">
+      <div class="logo">
+          <img [src]="imagen">
+      </div>
+  </div>
+</header>
+    <main class="contenido contenedor">
+        <section class="hacer">
+            <h2>Eventos</h2>
+            <div class="contenedor-cards">
+                <div class="card">
+                    <img [src]="imagen">
+                    <div class="info">
+                        <p class="categoria">concierto</p>
+                        <p class="titulo">Actividad 1</p>
+                        <p class="precio">Q1,200 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img [src]="imagen">
+                    <div class="info">
+                        <p class="categoria">streaming</p>
+                        <p class="titulo">Actividad 2</p>
+                        <p class="precio">Q300 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img [src]="imagen">
+                    <div class="info">
+                        <p class="categoria">Cafe</p>
+                        <p class="titulo">Actividad 3</p>
+                        <p class="precio">Q400 por persona</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="contenedor-cards contenedor">
+            <div class="nav-footer">
+                <h3>tuTicket.com</h3>
+            </div>
+        </div>
+    </footer>
