--- a/ticket/src/app/componentes/eventos/eventos.component.html
+++ b/ticket/src/app/componentes/eventos/eventos.component.html
@@ -5,36 +5,58 @@
       </div>
   </div>
 </header>
-    <main class="contenido contenedor">
-        <section class="hacer">
-            <h2>Eventos</h2>
-            <div class="contenedor-cards">
-                <div class="card">
-                    <img [src]="imagen">
-                    <div class="info">
-                        <p class="categoria">concierto</p>
-                        <p class="titulo">Actividad 1</p>
-                        <p class="precio">Q1,200 por persona</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img [src]="imagen">
-                    <div class="info">
-                        <p class="categoria">streaming</p>
-                        <p class="titulo">Actividad 2</p>
-                        <p class="precio">Q300 por persona</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img [src]="imagen">
-                    <div class="info">
-                        <p class="categoria">Cafe</p>
-                        <p class="titulo">Actividad 3</p>
-                        <p class="precio">Q400 por persona</p>
-                    </div>
-                </div>
+    <main id="main">
+      <div class="container">
+        <div class="card">
+          <div class="box">
+            <div class="content">
+              <h2>01</h2>
+              <h3>Evento 1</h3>
+              <p><span>Descripcion</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi illo eius cumque alias libero officia distinctio esse corporis exercitationem excepturi deserunt eum suscipit iure voluptatibus aperiam, nisi vitae modi?</p>
+              <p><span>Fecha</span> 7/11/2021</p>
+              <p><span>Hora</span> 15:00</p>
+              <p><span>Fecha limite</span> 5/11/2021</p>
+              <p><span>Categoria</span> Cine </p>
+              <a href="#">Mas Información</a>
             </div>
-        </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <div class="content">
+              <h2>01</h2>
+              <h3>Evento 2</h3>
+              <p><span>Descripcion</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi illo eius cumque alias libero officia distinctio esse corporis exercitationem excepturi deserunt eum suscipit iure voluptatibus aperiam, nisi vitae modi?</p>
+              <p><span>Fecha</span> 7/11/2021</p>
+              <p><span>Hora</span> 15:00</p>
+              <p><span>Fecha limite</span> 5/11/2021</p>
+              <p><span>Categoria</span> Cine </p>
+              <a href="#">Mas Información</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <div class="content">
+              <h2>01</h2>
+              <h3>Evento 3</h3>
+              <p><span>Descripcion</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi illo eius cumque alias libero officia distinctio esse corporis exercitationem excepturi deserunt eum suscipit iure voluptatibus aperiam, nisi vitae modi?</p>
+              <p><span>Fecha</span> 7/11/2021</p>
+              <p><span>Hora</span> 15:00</p>
+              <p><span>Fecha limite</span> 5/11/2021</p>
+              <p><span>Categoria</span> Cine </p>
+              <a href="#">Mas Información</a>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+      </div>
     </main>
     <footer class="footer">
         <div class="contenedor-cards contenedor">
