--- a/ticket/src/app/componentes/eventos/eventos.component.html
+++ b/ticket/src/app/componentes/eventos/eventos.component.html
@@ -7,54 +7,22 @@
 </header>
     <main id="main">
       <div class="container">
-        <div class="card">
+
+        <div class="card" *ngFor="let evento of eventos">
           <div class="box">
             <div class="content">
-              <h2>01</h2>
-              <h3>Evento 1</h3>
-              <p><span>Descripcion</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi illo eius cumque alias libero officia distinctio esse corporis exercitationem excepturi deserunt eum suscipit iure voluptatibus aperiam, nisi vitae modi?</p>
-              <p><span>Fecha</span> 7/11/2021</p>
-              <p><span>Hora</span> 15:00</p>
-              <p><span>Fecha limite</span> 5/11/2021</p>
-              <p><span>Categoria</span> Cine </p>
+              <h2>{{evento.id}}</h2>
+              <h3>{{evento.nombre}}</h3>
+              <p><span>Descripcion </span>{{ evento.descripcion}}</p>
+              <p><span>Fecha</span> {{evento.fecha}}</p>
+              <p><span>Hora</span> {{evento.hora}}</p>
+              <p><span>Fecha limite</span> {{evento.fecha_limite}}</p>
+              <p><span>Categoria</span> {{evento.nombre_categoria}} </p>
               <a href="#">Mas Información</a>
             </div>
           </div>
+
         </div>
-
-        <div class="card">
-          <div class="box">
-            <div class="content">
-              <h2>01</h2>
-              <h3>Evento 2</h3>
-              <p><span>Descripcion</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi illo eius cumque alias libero officia distinctio esse corporis exercitationem excepturi deserunt eum suscipit iure voluptatibus aperiam, nisi vitae modi?</p>
-              <p><span>Fecha</span> 7/11/2021</p>
-              <p><span>Hora</span> 15:00</p>
-              <p><span>Fecha limite</span> 5/11/2021</p>
-              <p><span>Categoria</span> Cine </p>
-              <a href="#">Mas Información</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="box">
-            <div class="content">
-              <h2>01</h2>
-              <h3>Evento 3</h3>
-              <p><span>Descripcion</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi illo eius cumque alias libero officia distinctio esse corporis exercitationem excepturi deserunt eum suscipit iure voluptatibus aperiam, nisi vitae modi?</p>
-              <p><span>Fecha</span> 7/11/2021</p>
-              <p><span>Hora</span> 15:00</p>
-              <p><span>Fecha limite</span> 5/11/2021</p>
-              <p><span>Categoria</span> Cine </p>
-              <a href="#">Mas Información</a>
-            </div>
-          </div>
-        </div>
-
-
-
-
 
       </div>
     </main>
